<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.dromara</groupId>
        <artifactId>testhub</artifactId>
        <version>${revision}</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>testhub-server</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.dromara</groupId>
            <artifactId>testhub-common</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>org.dromara</groupId>
            <artifactId>testhub-framework</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>org.dromara</groupId>
            <artifactId>testhub-sdk</artifactId>
            <version>${revision}</version>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>org.dromara</groupId>-->
<!--            <artifactId>testhub-methods</artifactId>-->
<!--            <version>${revision}</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>org.dromara</groupId>
            <artifactId>testhub-check</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>org.dromara</groupId>
            <artifactId>testhub-compare</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>org.dromara</groupId>
            <artifactId>testhub-sql</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>org.dromara</groupId>
            <artifactId>testhub-constant</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>org.dromara</groupId>
            <artifactId>testhub-convert</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>org.dromara</groupId>
            <artifactId>testhub-http</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>org.dromara</groupId>
            <artifactId>testhub-sleep</artifactId>
            <version>${revision}</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <!-- 重点 -->
                    <includeSystemScope>true</includeSystemScope>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>